// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="APIComponent-root-112"
>
  <div
    className="MuiPaper-root-117 MuiPaper-elevation1-120 MuiPaper-rounded-118 MuiCard-root-116 APIComponent-card-113"
  >
    <div
      className="MuiCardHeader-root-144"
    >
      <div
        className="MuiCardHeader-content-147"
      >
        <span
          className="MuiTypography-root-150 MuiTypography-headline-155 MuiCardHeader-title-148"
        >
          Pod Setup
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-175"
    />
    <div
      className="MuiCardContent-root-179 APIComponent-content-114"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-marginDense-186"
          data-shrink={false}
          htmlFor="settings-pairingMethod"
        >
          Pairing Method
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <div
            className="MuiSelect-root-194"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-195 MuiSelect-selectMenu-196 MuiInput-input-207 MuiInput-inputMarginDense-208"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id="settings-pairingMethod"
              name={undefined}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212 MuiSelect-icon-198"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-marginDense-186"
          data-shrink={false}
          htmlFor="settings-pairingMethodInitial"
        >
          Initial Pairing Method
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <div
            className="MuiSelect-root-194"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-195 MuiSelect-selectMenu-196 MuiInput-input-207 MuiInput-inputMarginDense-208"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id="settings-pairingMethodInitial"
              name={undefined}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212 MuiSelect-icon-198"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-marginDense-186"
          data-shrink={false}
          htmlFor="settings-podSizeMinimum"
        >
          Minimum Pod Size
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-207 MuiInput-inputType-210 MuiInput-inputMarginDense-208"
            defaultValue={undefined}
            disabled={false}
            id="settings-podSizeMinimum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="number"
            value=""
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-marginDense-186"
          data-shrink={false}
          htmlFor="settings-podSizeMaximum"
        >
          Maximum Pod Size
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-207 MuiInput-inputType-210 MuiInput-inputMarginDense-208"
            defaultValue={undefined}
            disabled={false}
            id="settings-podSizeMaximum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="APIComponent-root-112"
>
  <div
    className="MuiPaper-root-117 MuiPaper-elevation1-120 MuiPaper-rounded-118 MuiCard-root-116 APIComponent-card-113"
  >
    <div
      className="MuiCardHeader-root-144"
    >
      <div
        className="MuiCardHeader-content-147"
      >
        <span
          className="MuiTypography-root-150 MuiTypography-headline-155 MuiCardHeader-title-148"
        >
          Pod Setup
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-175"
    />
    <div
      className="MuiCardContent-root-179 APIComponent-content-114"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-shrink-187 MuiInputLabel-marginDense-186"
          data-shrink={true}
          htmlFor="settings-pairingMethod"
        >
          Pairing Method
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <div
            className="MuiSelect-root-194"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-195 MuiSelect-selectMenu-196 MuiInput-input-207 MuiInput-inputMarginDense-208"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Historic
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id="settings-pairingMethod"
              name={undefined}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value={1}
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212 MuiSelect-icon-198"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-shrink-187 MuiInputLabel-marginDense-186"
          data-shrink={true}
          htmlFor="settings-pairingMethodInitial"
        >
          Initial Pairing Method
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <div
            className="MuiSelect-root-194"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-195 MuiSelect-selectMenu-196 MuiInput-input-207 MuiInput-inputMarginDense-208"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Historic
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id="settings-pairingMethodInitial"
              name={undefined}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value={1}
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212 MuiSelect-icon-198"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-shrink-187 MuiInputLabel-marginDense-186"
          data-shrink={true}
          htmlFor="settings-podSizeMinimum"
        >
          Minimum Pod Size
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-207 MuiInput-inputType-210 MuiInput-inputMarginDense-208"
            defaultValue={undefined}
            disabled={false}
            id="settings-podSizeMinimum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="number"
            value={4}
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-180 MuiFormControl-marginDense-182 APIComponent-field-115"
      >
        <label
          className="MuiFormLabel-root-189 MuiInputLabel-root-184 MuiInputLabel-formControl-185 MuiInputLabel-animated-188 MuiInputLabel-shrink-187 MuiInputLabel-marginDense-186"
          data-shrink={true}
          htmlFor="settings-podSizeMaximum"
        >
          Maximum Pod Size
        </label>
        <div
          className="MuiInput-root-199 MuiInput-formControl-200 MuiInput-underline-203"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-207 MuiInput-inputType-210 MuiInput-inputMarginDense-208"
            defaultValue={undefined}
            disabled={false}
            id="settings-podSizeMaximum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="number"
            value={7}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
